# Scope-Auxiliary-Front-Panel

./: .gitmodules  README.md  RevB Controls.py  makefile
afp-ui/: Config.cs  Global.cs  Global.cs.uid  Main.cs  Main.cs.uid  README.md  WsClient.cs  WsClient.cs.uid  afp-ui.csproj  afp-ui.sln  buildprof.gdbuild  export_presets.cfg  icon.svg.import  main.tscn  main_theme.tres  project.godot  toast.tscn  toast_message.gd
afp-ui/Components/: MacroControl.cs  MacroControl.cs.uid  ScopeOption.cs  ScopeOption.cs.uid  ScopeOption.tscn  macro_control.tscn  toast.gd  toast.gd.uid  toast.tscn  toast_message.gd  toast_message.gd.uid
afp-ui/Core/: Config.cs  Config.cs.uid  Global.cs  Logger.cs  Logger.cs.uid  WebSocketClient.cs  WsClient.cs
afp-ui/Packet/: PacketBase.cs  PacketContainer.cs  PacketContainer.cs.uid  ScopeStatus.cs  ScopeStatus.cs.uid
afp-ui/Resources/: ScopeInstance.cs  ScopeInstance.cs.uid  SoftwareCredit.cs  SoftwareCredit.cs.uid  TabConfig.cs  TabConfig.cs.uid  invert.gdshader.uid
afp-ui/View/: About.cs  About.cs.uid  Home.cs  Home.cs.uid  Log.cs  Log.cs.uid  Macros.cs  Macros.cs.uid  Scopes.cs  Scopes.cs.uid  Settings.cs  Settings.cs.uid  ViewManager.cs  ViewManager.cs.uid  about.tscn  home.tscn  macros.tscn  scopes.tscn  settings.tscn
afp-ui/icons/: AutoKey.svg.import  Error.svg.import  Favorites.svg.import  Gear.svg.import  Info.svg.import  ListSelect.svg.import  Warning.svg.import  qrcode_github.svg.import  splash.png.import  (+2 more)
hardware/: AFPLCD5b.stl  PCB_Tektronix-Auxiliary-Front-Panel-(AFP).json  Schematic_Tektronix Auxiliary Front Panel (AFP)_ Rev B.json
image-builder/: .gitignore
software/: CONTRIBUTING.md  README.md  pyproject.toml
software/rpi-setup/: README.md  splash.tga  tek-afp-setup  userconf.txt
software/rpi-setup/bdebstrap/: customize90-tekafp  customize99-cmdline
software/rpi-setup/config/: tekafp.yaml
software/rpi-setup/layer/: afpprod.yaml
software/rpi-setup/rootfs-overlay/etc/greetd/: config.toml
software/rpi-setup/rootfs-overlay/etc/systemd/system/: regenerate-ssh-host-keys.service  tekafp.service
software/scratch/: uart_smoke.py
software/scripts/: basic_connect.py  integrate_uart_only.py  simple_macro_demo.py  uart_to_scope.py
software/tek-afp/: __main__.py
software/tekafp/: __init__.py  __main__.py  afp.py
software/tekafp/api_server/: __init__.py  error.py  packets.py
software/tekafp/input/: __init__.py
software/tekafp/registry/: __init__.py
software/tekafp/scope/: actions.py  commands.py  constants.py  controller.py  macros.py  scope.py  state.py
software/tekafp/state/: __init__.py
software/tekafp/uart/: __init__.py
software/tekafp/util/: __init__.py  observable.py
software/test/: registry_notes.py
software/test/api_server/: test_packets.py  test_websocket.py
software/test/input/: test_input.py
software/test/scope/: test_controller.py  test_predict.py
software/test/uart/: test_uart.py
(+63 files in other folders)
