[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tek-afp"
version = "0.1.0"
authors = [
    { name = "Andrew Stanton", email = "stan35@pdx.edu" },
]
description = "Software component for an auxiliary front panel for controlling Tektronix MSO 4/5/6 series oscilloscopes."
license = "CERN-OHL-P-2.0"
license-files = ["../LICEN[CS]E*"]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = [
    "pyusb==1.3.1",
    "pyvisa==1.16.1",
    "pyvisa-py==0.8.1",
]

[project.urls]
Repository = "https://github.com/PSU-ECE-Capstone-11-2025-26/demo-repository.git"

[dependency-groups]
build = [
    "setuptools>=80.9.0",
    "pytest>=9.0.2",
]
dev = [
    "ruff>=0.14.11",
    "sphinx>=9.1.0",
    "ty>=0.0.11",
]

[tool.setuptools.packages.find]
include = ["tekafp*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "ANN"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
lines-after-imports = 2
order-by-type = true
split-on-trailing-comma = true

[tool.ruff.format]
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.uv]
default-groups = ["build", "dev"]

[pytest]
addopts = ["--import-mode=importlib"]
