[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tek-afp"
version = "2.1.0"
authors = [
    { name = "Andrew Stanton", email = "stan35@pdx.edu" },
    { name = "Antonio Hernandez Olivares", email = "anton32@pdx.edu" }
]
description = "Software component for an auxiliary front panel for controlling Tektronix MSO 4/5/6 series oscilloscopes."
license = "CERN-OHL-P-2.0"
license-files = ["LICEN[CS]E*"]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pyserial>=3.5",
    "pyusb==1.3.1",
    "pyvisa==1.16.1",
    "pyvisa-py==0.8.1",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
    "zeroconf>=0.148.0",
]

[project.urls]
Repository = "https://github.com/PSU-ECE-Capstone-11-2025-26/demo-repository.git"

[dependency-groups]
build = [
    "setuptools>=80.9.0",
    "pytest>=9.0.2",
    "httpx>=0.28.0",
]
dev = [
    "ruff>=0.14.11",
    "sphinx>=9.1.0",
    "ty>=0.0.11",
]

[tool.setuptools.packages.find]
include = ["tekafp*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "ANN"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
lines-after-imports = 2
order-by-type = true
split-on-trailing-comma = true

[tool.ruff.format]
skip-magic-trailing-comma = true
line-ending = "lf"

[tool.uv]
default-groups = ["build", "dev"]

[pytest]
addopts = ["--import-mode=importlib"]
